- add serialization to sasl init.
- dont allocate dev_ctl_ops too early.
- fix incorrect round robin host detection.
- fix race accessing qdn in get_query_dn().
- fix leak in cache_push_mapent().
- fix config entry read buffer not checked.
- fix FILE pointer check in defaults_read_config().
- fix memory leak in conf_amd_get_log_options().
- fix signed comparison in inet_fill_net().

04/06/2014 autofs-5.1.0
=======================
- fix mistake in assignment.
- add amd map format parser.
- check for non existent negative entries in lookup_ghost().
- fix reset flex scan buffer on init.
- fix fix negative status being reset on map read.
- amd lookup update lookup ldap to handle amd keys.
  - inadvertantly dropped from initial series.
- amd lookup update lookup hesiod to handle amd keys.
  - inadvertantly dropped from initial series.
- fix wildcard key lookup.
- fix out of order amd timestamp lookup.
- fix ldap default schema config.
- fix ldap default master map name config.
- fix map format init in lookup_init().
- fix incorrect max key length in defaults get_hash().
- fix xfn sets incorrect lexer state.
- fix old style key lookup.
- fix expire when server not responding.
- fix ldap_uri config update.
- fix typo in conf_load_autofs_defaults().
- fix hash on confg option add and delete.
- add plus to path match pattern.
- fix multi entry ldap option handling.
- cleanup options in amd_parse.c
- allow empty value for some map options.
- allow empty value in macro selectors.

28/03/2014 autofs-5.0.9
=======================
- fix undefined authtype_requires_creds err if ldap enabled but without sasl.
- fix master map type check.
- fix task manager not getting signaled.
- allow --with-systemd to take a path arg.
- fix WITH_LIBTIRPC function name.
- fix ipv6 libtirpc getport.
- fix ipv6 link local address handling.
- fix fix ipv6 libtirpc getport.
- get_nfs_info() should query portmapper if port is not given.
- fix rpc_portmap_getport() proto not set.