@@ -10,6 +10,7 @@
 - fix FILE pointer check in defaults_read_config().
 - fix memory leak in conf_amd_get_log_options().
 - fix signed comparison in inet_fill_net().
+- fix buffer size checks in get_network_proximity().
 
 04/06/2014 autofs-5.1.0
 =======================
